--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ django-bootstrap3==6.2.2
 django-registration-redux==1.2
 django-storages==1.1.8
 django-toolbelt==0.0.1
-gunicorn==19.3.0
+gunicorn~>19.5.0
 psycopg2==2.6.1
 static3==0.6.1
 wsgiref==0.1.2
